Task/99 commands to dto (#100)
* added dtos, fixed in front and back

* fix bad date formate
