# src/Bouvet.AssetHub.API/Contracts/UpdateAssetsByIdDto.cs
@@ -1,0 +1,6 @@
+﻿using Bouvet.AssetHub.API.Domain.Asset.Models;
+
+namespace Bouvet.AssetHub.API.Contracts
+{
+    public record UpdateAssetsByIdDto ( List<int> Ids, Status Status);
+}
