# src/bouvet.assethub.ui/src/_generated/swagger.json
@@ -50,17 +50,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateAssetCommand"
+                "$ref": "#/components/schemas/CreateAssetDto"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateAssetCommand"
+                "$ref": "#/components/schemas/CreateAssetDto"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateAssetCommand"
+                "$ref": "#/components/schemas/CreateAssetDto"
               }
             }
           }
@@ -96,17 +96,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateAssetsByIdCommand"
+                "$ref": "#/components/schemas/UpdateAssetsByIdDto"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateAssetsByIdCommand"
+                "$ref": "#/components/schemas/UpdateAssetsByIdDto"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateAssetsByIdCommand"
+                "$ref": "#/components/schemas/UpdateAssetsByIdDto"
               }
             }
           }
@@ -364,17 +364,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateCategoryCommand"
+                "$ref": "#/components/schemas/CreateCategoryDto"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateCategoryCommand"
+                "$ref": "#/components/schemas/CreateCategoryDto"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateCategoryCommand"
+                "$ref": "#/components/schemas/CreateCategoryDto"
               }
             }
           }
@@ -719,17 +719,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateLoanCommand"
+                "$ref": "#/components/schemas/CreateLoanDto"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateLoanCommand"
+                "$ref": "#/components/schemas/CreateLoanDto"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateLoanCommand"
+                "$ref": "#/components/schemas/CreateLoanDto"
               }
             }
           }
@@ -912,8 +912,7 @@
             "format": "int32"
           },
           "categoryName": {
-            "type": "string",
-            "nullable": true
+            "type": "string"
           },
           "status": {
             "$ref": "#/components/schemas/Status"
@@ -929,16 +928,15 @@
             "format": "int32"
           },
           "name": {
-            "type": "string",
-            "nullable": true
+            "type": "string"
           }
         },
         "additionalProperties": false
       },
-      "CreateAssetCommand": {
+      "CreateAssetDto": {
         "type": "object",
         "properties": {
-          "serialNumberValue": {
+          "serialNumber": {
             "type": "integer",
             "format": "int32"
           },
@@ -949,17 +947,16 @@
         },
         "additionalProperties": false
       },
-      "CreateCategoryCommand": {
+      "CreateCategoryDto": {
         "type": "object",
         "properties": {
           "name": {
-            "type": "string",
-            "nullable": true
+            "type": "string"
           }
         },
         "additionalProperties": false
       },
-      "CreateLoanCommand": {
+      "CreateLoanDto": {
         "type": "object",
         "properties": {
           "intervalStart": {
@@ -968,7 +965,8 @@
           },
           "intervalStop": {
             "type": "string",
-            "format": "date-time"
+            "format": "date-time",
+            "nullable": true
           },
           "intervalIsLongterm": {
             "type": "boolean"
@@ -982,8 +980,7 @@
             "format": "int32"
           },
           "bsdReference": {
-            "type": "string",
-            "nullable": true
+            "type": "string"
           }
         },
         "additionalProperties": false
@@ -1031,7 +1028,8 @@
           },
           "intervalStop": {
             "type": "string",
-            "format": "date-time"
+            "format": "date-time",
+            "nullable": true
           },
           "intervalIsLongterm": {
             "type": "boolean"
@@ -1048,25 +1046,22 @@
             "$ref": "#/components/schemas/Status"
           },
           "assetCategoryName": {
-            "type": "string",
-            "nullable": true
+            "type": "string"
           },
           "bsdReference": {
-            "type": "string",
-            "nullable": true
+            "type": "string"
           }
         },
         "additionalProperties": false
       },
       "Status": {
         "enum": [
-          0,
-          1,
-          2,
-          3
+          "Registered",
+          "Available",
+          "Unavailable",
+          "Discontinued"
         ],
-        "type": "integer",
-        "format": "int32"
+        "type": "string"
       },
       "UpdateAssetDto": {
         "type": "object",
@@ -1081,7 +1076,7 @@
         },
         "additionalProperties": false
       },
-      "UpdateAssetsByIdCommand": {
+      "UpdateAssetsByIdDto": {
         "type": "object",
         "properties": {
           "ids": {
@@ -1089,8 +1084,7 @@
             "items": {
               "type": "integer",
               "format": "int32"
-            },
-            "nullable": true
+            }
           },
           "status": {
             "$ref": "#/components/schemas/Status"
@@ -1102,8 +1096,7 @@
         "type": "object",
         "properties": {
           "name": {
-            "type": "string",
-            "nullable": true
+            "type": "string"
           }
         },
         "additionalProperties": false
